# AdaptiveViscositySolver

./: .gitignore  CMakeLists.txt  README  README.md
Scenes/: viscousBeam.hip  viscousBuckling.hip
Source/: CMakeLists.txt  HDK_AdaptiveViscosity.cpp  HDK_AdaptiveViscosity.h  HDK_OctreeGrid.cpp  HDK_OctreeGrid.h  HDK_OctreeVectorFieldInterpolator.cpp  HDK_OctreeVectorFieldInterpolator.h  HDK_Utilities.h
